Forelesning fredag 18. mars

--- a/11_Frekvensrespons.ipynb
+++ b/11_Frekvensrespons.ipynb
@@ -49,13 +49,14 @@
     }
    },
    "source": [
-    "# Tema tirsdag 16. mars\n",
+    "# Tema fredag 19. mars\n",
     "\n",
     "* LTI-system og Sinussekvenser\n",
     "* Hva er frekvensrespons?\n",
-    "* Utregning av frekvensrespons\n",
     "* Amplituderespons\n",
-    "* Faserespons"
+    "* Faserespons\n",
+    "* Presentasjon og tolking av frekvensrespons\n",
+    "* Transformasjon av filtre"
    ]
   },
   {
@@ -169,7 +170,7 @@
     "    * Amplitudejustering bestemmes av funksjonens absoluttverdi i det komplekse plan.\n",
     "    * Slik filtrering har vi f.eks. utført med hjelp av FFT.\n",
     "\n",
-    "[Figur]"
+    "<img src=\"Figurer/11_Frekvensrespons/Fig2_FourierFilt.png\" style=\"width: 80%; margin-left: 100px\" />"
    ]
   },
   {
@@ -185,7 +186,49 @@
     "$$x[n]*h[n] \\stackrel{\\mathrm{DTFT}}{\\longleftrightarrow} X\\left(e^{j\\hat{\\omega}}\\right)\\cdot H \\left(e^{j\\hat{\\omega}}\\right)$$ \n",
     "\n",
     "* *Konvolusjon* mellom et signal $x[n]$ og en impulsrespons $h[n]$ vil ha nøyaktig samme innvirkning på signalet som å multiplisere det fouriertransformerte signalet $X\\left(e^{j\\hat{\\omega}}\\right)$ med ***frekvensresponsen*** $H\\left(e^{j\\hat{\\omega}}\\right)$.\n",
-    "    * Alternativt forklart: istedenfor å transformere signalet $x[n]$ til frekvensplanet for å utføre filtrering, transformerer vi nå heller \"filtreringsfunksjonen\" $H\\left(e^{j\\hat{\\omega}}\\right)$ til tidsplanet."
+    "    * Alternativt forklart: istedenfor å transformere signalet $x[n]$ til frekvensplanet for å utføre filtrering, transformerer vi nå heller \"filtreringsfunksjonen\" $H\\left(e^{j\\hat{\\omega}}\\right)$ til tidsplanet.\n",
+    "    * Ettersom filtrering i frekvensdomenet er en multiplikasjonsoperasjon, vil filterets egenskaper være lett å tyde ut ifra frekvensresponsen $H\\left(e^{j\\hat{\\omega}}\\right)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Grafisk fremstilling av frekvensrespons\n",
+    "\n",
+    "* Frekvensresponsen $H\\left(e^{j\\hat{\\omega}}\\right)$ er en *kompleks funksjon* som forteller hvordan filteret vil påvirke enhver ren sinussekvens $x[n] = A\\cdot \\cos(\\hat{\\omega}_0\\cdot n + \\phi)$.\n",
+    "<img src=\"Figurer/11_Frekvensrespons/Fig3_LTI_SInusoid.png\" style=\"width: 80%; margin-left: 100px\" />\n",
+    "\n",
+    "* Når vi analyserer filtre er det gunstig å kunne studere skaleringen og forskyvningen hver for seg. Disse to \"komponentene\" er kjent som amplituderesponsen og faseresponsen til et filter.\n",
+    "    * **Amplituderespons** $\\left|H\\left(e^{j\\hat{\\omega}}\\right)\\right|$\n",
+    "        * Forteller hvor mye en sinussekvens forsterkes/dempes, gitt digital frekvens $\\hat{\\omega}$.\n",
+    "    * **Faserespons** $\\angle H\\left(e^{j\\hat{\\omega}}\\right)$\n",
+    "        * Forteller hvor mange radianer sinussekvensen ut av filteret er forskjøvet i forhold til inngangssignalet, gitt digital frekvens $\\hat{\\omega}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Amplituderespons\n",
+    "\n",
+    "<img src=\"Figurer/11_Frekvensrespons/Fig4_AmpResp.png\" style=\"width: 80%; margin-left: 100px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Faserespons\n",
+    "<img src=\"Figurer/11_Frekvensrespons/Fig5_PhaseResp.png\" style=\"width: 80%; margin-left: 100px\" />"
    ]
   },
   {
@@ -201,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -211,7 +254,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48c4dfcd882c4fa5a11e5b5879bb1ae0",
+       "model_id": "411a963dd06442a189c899e4e29c2ec0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -225,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5b9376ab9704796b950a9a04d6a8200",
+       "model_id": "e14f562d18f04004b25b7b9955d21d70",
        "version_major": 2,
        "version_minor": 0
       },
@@ -239,7 +282,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0da1b99c72f44add998d605549007d52",
+       "model_id": "cb38fb66a93144668f17c1f358a5c3b7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -253,10 +296,10 @@
     {
      "data": {
       "text/plain": [
-       "<Kildekode._11_Frekvensrespons.FreqRespDemo at 0x24a5d5c0910>"
+       "<Kildekode._11_Frekvensrespons.FreqRespDemo at 0x228e1b525e0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +317,17 @@
     }
    },
    "source": [
-    "## Frekvensrespons i Python\n"
+    "## Frekvensrespons i Python\n",
+    "\n",
+    "* Kan regnes ut numerisk med funkskjonen [`freqz()`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.freqz.html). \n",
+    "    * `freqz()` er ikke ulik `fft()`, men gir litt flere valgmuligheter.\n",
+    "* **Argument:**\n",
+    "    * `b`: Filterkoeffisienter $b_k$\n",
+    "    * `a`: Filterkoeffisienter $a_k$ (*dersom relevant*)\n",
+    "    * `worN`: Antall datapunkter (*512 dersom annet ikke spesifisert*) \n",
+    "* **Returverdier:**\n",
+    "    * `w`: Array med digitale frekvenser lineært fordelt mellom $0$ og $\\pi$.\n",
+    "    * `Hw`: Array med filterresponser for frekvensene i `w`."
    ]
   },
   {
@@ -285,9 +338,254 @@
     }
    },
    "source": [
-    "## Regneeksempel 2\n",
+    "## Kodeeksempel:\n",
+    "* Regn ut og presenter frekvensresponsen til et filter med impulsrespons \n",
+    "$$h[n] = \\frac{1}{16}\\cdot \\delta[n] + \\frac{1}{4}\\cdot \\delta[n-1] + \\frac{3}{6}\\cdot \\delta[n-2] + \\frac{1}{4}\\cdot \\delta[n-3] + \\frac{1}{16}\\cdot \\delta[n-4]$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82443c1fbc95457f8186ce69d862448e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hn = np.array([1/16, 1/4, 3/8, 1/4, 1/16])\n",
+    "plt.close(2); plt.figure(2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Regneeksempel 2:\n",
+    "\n",
+    "<img src=\"Figurer/11_Frekvensrespons/Fig6_Example2.png\" style=\"height: 90%; margin-left: 100px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Transformasjon av filtre\n",
+    "\n",
+    "* FIR filtre er svært enkle å gjøre endringer på, ettersom vi kan justere hver sample i impulsresponsen individuelt.\n",
+    "* Ettersom filterets frekvensrespons og impulsresponsens frekvensinnhold er det samme, er det en rekke verktøy vi kan ta i bruk for å gjøre endringer på filteregenskaper.\n",
+    "    * Noen av de mest aktuelle er *Amplitudemodulasjon* og *Vindusfunksjoner*.\n",
+    "        * Disse begrepene har vi arbeidet med i `Dataøving 1` og `Dataøving 3`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Kodeksempel 2:\n",
+    "1. Ta utgangspunkt i et 32-punkts middelverdifilter, og lag et båndpassfilter ved bruk av *Amplitudemodulasjon*.\n",
+    "    * Passbåndet skal ha senterfrekvens $\\hat{\\omega}_{BP} = \\frac{3\\pi}{4}$.\n",
+    "2. Bruk en *Vindusfunksjon* til å øke \"stoppbåndsdempingen\" til filteret."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Lavpassfilter $\\rightarrow$ Båndpassfilter\n",
+    "\n",
+    "* Et lavpassfilter kan konverteres til et båndpassfilter ved å \"mikse\" impulsresponsen med en sinussekvens.\n",
+    "    \\begin{align}\n",
+    "    h_{BP}[n] &= 2\\cdot h_{LP}[n]\\cdot \\cos(\\hat{\\omega}_{BP}\\cdot n)\\\\\n",
+    "    &= h_{LP}[n]\\cdot \\left(e^{j\\hat{\\omega}_{BP}\\cdot n}+e^{-j\\hat{\\omega}_{BP}\\cdot n}\\right)\n",
+    "    \\end{align}\n",
+    "    * $\\hat{\\omega}_{BP}$ vil da være senterfrekvensen til passbåndet.\n",
+    "    * Sinussekvensen vi mikser med har amplitude 2 slik at amplituden til positivt og negativt frekvensforskjøvet signalinnhold holder seg lik."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Utregning av frekvensrespons\n",
+    "\n",
+    "* Diskrét-Tids Fouriertransformasjon (DTFT) av impulsresponesn $h[n]$ gir et *kontinuerlig* funksjonsuttrykk for filterets frekvensrespons.\n",
+    "\n",
+    "* Formel for *kausale* filtre:\n",
+    "\n",
+    "### \\begin{align}H\\left(e^{j\\hat{\\omega}}\\right) &= \\sum_{n=-\\infty}^{\\infty} h[n]\\cdot e^{-j\\hat{\\omega}\\cdot n}\\\\ &= h[0]\\cdot e^{0}+h[1]\\cdot e^{-j\\hat{\\omega}}+h[2]\\cdot e^{-j2\\hat{\\omega}}+\\ldots \\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Regneeksempel 3\n",
     "* Et FIR filter er gitt ved impulsresponsen $h[n] =\\frac{1}{4}\\delta[n]+ \\frac{1}{2}\\delta[n-1]+ \\frac{1}{4}\\delta[n-2]$\n",
     "* Finn et funksjonsuttrykk for filterets frekvensrespons $H\\left(e^{j\\hat{\\omega}}\\right)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Demo: frekvensrespons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2053f5675db04a9092deb0118b7e9105",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6fe361c8235c4a709ddd493e3ab4da4d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=0.0, description='Digital Frekvens $\\\\hat{\\\\omega}\\\\ (\\\\times \\\\pi)$:', layou…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1e6fac1dea024b3aa072bdc0af50f9f7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Kildekode._11_Frekvensrespons.DTFT_demo at 0x228e53d9fa0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hn = np.array([0.25, 0.5, 0.25])\n",
+    "DTFT_demo(hn, fig_num = 6, figsize=(12,8))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# DTFT egenskaper\n",
+    "\n",
+    "<img src=\"Figurer/11_Frekvensrespons/Fig7_DTFTProperties.png\" style=\"height: 90%; margin-left: 100px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# DTFT transformasjonspar\n",
+    "<img src=\"Figurer/11_Frekvensrespons/Fig8_TransformPairs.png\" style=\"height: 90%; margin-left: 100px\" />"
    ]
   }
  ],
