--- a/11_Frekvensrespons.ipynb
+++ b/11_Frekvensrespons.ipynb
@@ -51,12 +51,31 @@
    "source": [
     "# Tema fredag 19. mars\n",
     "\n",
-    "* LTI-system og Sinussekvenser\n",
+    "* Oppsummering impulsrespons og konvolusjon\n",
     "* Hva er frekvensrespons?\n",
     "* Amplituderespons\n",
     "* Faserespons\n",
     "* Presentasjon og tolking av frekvensrespons\n",
-    "* Transformasjon av filtre"
+    "* Transformasjon av filtre\n",
+    "* Utregning av frekvensrespons med DTFT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Oppsummering impulsrespons og \n",
+    "\n",
+    "* *Lineære*, og *Tidsinvariante* (LTI) system tillater mye fleksibilitet med tanke på rekkefølge av operasjoner, og kan beskrives med sin *impulsrespons* $h[n]$.\n",
+    "* Filtrereing av et inngangssignal $x[n]$ vil være matematisk ekveivalent med å regne *konvolusjon* mellom inngangssignalet $x[n]$ og impulsresponsen $h[n]$.\n",
+    "\\begin{align}\n",
+    "y[n] &= x[n]*h[n]\\\\\n",
+    "&= \\sum_{k=-\\infty}^{\\infty}x[k]\\cdot h[n-k]\n",
+    "\\end{align}"
    ]
   },
   {
@@ -220,14 +239,31 @@
    "source": [
     "# Amplituderespons\n",
     "\n",
+    "* Angir filterets skalering av sinussekvenser med digital frekvens $\\hat{\\omega}$.\n",
+    "\n",
+    "$$\\left|H\\left(e^{j\\hat{\\omega}}\\right)\\right| = \\frac{\\left|Y\\left(e^{j\\hat{\\omega}}\\right)\\right|}{\\left|X\\left(e^{j\\hat{\\omega}}\\right)\\right|}$$\n",
+    "\n",
+    "* Lik symmetri rundt $\\hat{\\omega}=0$.\n",
+    "$$\\left|H\\left(e^{j\\hat{\\omega}}\\right)\\right| = \\left|H\\left(e^{-j\\hat{\\omega}}\\right)\\right|$$\n",
+    "\n",
     "<img src=\"Figurer/11_Frekvensrespons/Fig4_AmpResp.png\" style=\"width: 80%; margin-left: 100px\" />"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Faserespons\n",
+    "* Angir forsinkelsen av bølgeformen til en sinussekvens med digital frekvens $\\hat{\\omega}$ påført av filteret.\n",
+    "$$\\angle H\\left(e^{j\\hat{\\omega}}\\right) = \\angle Y\\left(e^{j\\hat{\\omega}}\\right) - \\angle X\\left(e^{j\\hat{\\omega}}\\right)$$\n",
+    "* Oppgitt i radianer. En faserespons på $\\angle H\\left(e^{j\\hat{\\omega}}\\right) =  -2\\pi$ vil f.eks. tilsvare en forsinkelse på én signalperiode for signalkomponenten med frekvens $\\hat{\\omega}$.\n",
+    "* Odde symmetri rundt $\\hat{\\omega}=0$:\n",
+    "$$\\angle H\\left(e^{j\\hat{\\omega}}\\right) = -\\angle H\\left(e^{-j\\hat{\\omega}}\\right)$$\n",
+    "\n",
     "<img src=\"Figurer/11_Frekvensrespons/Fig5_PhaseResp.png\" style=\"width: 80%; margin-left: 100px\" />"
    ]
   },
@@ -244,8 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -254,7 +291,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "411a963dd06442a189c899e4e29c2ec0",
+       "model_id": "515e825276bb4bbb9940127af2d4ef4e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -268,7 +305,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e14f562d18f04004b25b7b9955d21d70",
+       "model_id": "da1c0045cbfc42f0bccad943dd0747c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -282,7 +319,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb38fb66a93144668f17c1f358a5c3b7",
+       "model_id": "5968f9bc27434476866cac69293de5f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -296,17 +333,17 @@
     {
      "data": {
       "text/plain": [
-       "<Kildekode._11_Frekvensrespons.FreqRespDemo at 0x228e1b525e0>"
+       "<Kildekode._11_Frekvensrespons.FreqRespDemo at 0x25c64ffd700>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hn = np.array([0.25, 0.5, 0.25])\n",
-    "FreqRespDemo(hn)"
+    "hn = np.array([-0.25, 0.5, -0.25])\n",
+    "FreqRespDemo(hn, figsize=(12,8))"
    ]
   },
   {
@@ -340,12 +377,12 @@
    "source": [
     "## Kodeeksempel:\n",
     "* Regn ut og presenter frekvensresponsen til et filter med impulsrespons \n",
-    "$$h[n] = \\frac{1}{16}\\cdot \\delta[n] + \\frac{1}{4}\\cdot \\delta[n-1] + \\frac{3}{6}\\cdot \\delta[n-2] + \\frac{1}{4}\\cdot \\delta[n-3] + \\frac{1}{16}\\cdot \\delta[n-4]$$"
+    "$$h[n] = \\frac{1}{16}\\cdot \\delta[n]  +\\frac{1}{4}\\cdot \\delta[n-1]+ \\frac{3}{8}\\cdot \\delta[n-2] +  \\frac{1}{4}\\cdot \\delta[n-3] + \\frac{1}{16}\\cdot \\delta[n-4]$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -355,7 +392,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82443c1fbc95457f8186ce69d862448e",
+       "model_id": "c81c4ff47a8b456595c5de9f836bd784",
        "version_major": 2,
        "version_minor": 0
       },
@@ -369,17 +406,31 @@
     {
      "data": {
       "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
+       "Text(0.5, 0, 'Fysisk frekvens $Hz$')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import scipy.signal as sig\n",
+    "\n",
     "hn = np.array([1/16, 1/4, 3/8, 1/4, 1/16])\n",
-    "plt.close(2); plt.figure(2)\n"
+    "w, Hw = sig.freqz(hn, fs=8000)\n",
+    "Hw_amp = np.abs(Hw)\n",
+    "Hw_phase = np.unwrap(np.angle(Hw))\n",
+    "\n",
+    "plt.close(2); plt.figure(2)\n",
+    "plt.subplot(2,1,1)\n",
+    "plt.plot(w, Hw_amp)\n",
+    "plt.ylabel('Amplituderespons')\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.plot(w, Hw_phase)\n",
+    "plt.ylabel('Faserespons')\n",
+    "plt.xlabel('Fysisk frekvens $Hz$')\n",
+    "#plt.xlabel(r'Digital Frekvens $\\hat{\\omega} \\ (\\times \\pi)$')"
    ]
   },
   {
@@ -427,14 +478,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "71498408041849bf8d160bbd58c2d6e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Text(0.5, 0, 'Digital Frekvens $\\\\hat{\\\\omega} \\\\ (\\\\times \\\\pi)$')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hn = np.ones(32)/32\n",
+    "hn_bp = hn*2*cos(3*pi/4*np.arange(32))\n",
+    "w, Hw = sig.freqz(hn_bp, worN=519)\n",
+    "Hw_amp = np.abs(Hw)\n",
+    "Hw_phase = np.unwrap(np.angle(Hw))\n",
+    "\n",
+    "plt.close(2); plt.figure(2)\n",
+    "plt.subplot(2,1,1)\n",
+    "plt.plot(w/pi, Hw_amp)\n",
+    "plt.ylabel('Amplituderespons')\n",
+    "plt.subplot(2,1,2)\n",
+    "plt.plot(w/pi, Hw_phase)\n",
+    "plt.ylabel('Faserespons')\n",
+    "plt.xlabel(r'Digital Frekvens $\\hat{\\omega} \\ (\\times \\pi)$')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -481,7 +572,7 @@
    },
    "source": [
     "## Regneeksempel 3\n",
-    "* Et FIR filter er gitt ved impulsresponsen $h[n] =\\frac{1}{4}\\delta[n]+ \\frac{1}{2}\\delta[n-1]+ \\frac{1}{4}\\delta[n-2]$\n",
+    "* Et FIR filter er gitt ved impulsresponsen $h[n] =-\\frac{1}{4}\\delta[n]+ \\frac{1}{2}\\delta[n-1]- \\frac{1}{4}\\delta[n-2]$\n",
     "* Finn et funksjonsuttrykk for filterets frekvensrespons $H\\left(e^{j\\hat{\\omega}}\\right)$."
    ]
   },
@@ -508,7 +599,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2053f5675db04a9092deb0118b7e9105",
+       "model_id": "279b09904dbe4027a9ad6bd3a0117b66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -522,7 +613,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fe361c8235c4a709ddd493e3ab4da4d",
+       "model_id": "390863e3ba24471bbf4e68925fff539f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -536,7 +627,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e6fac1dea024b3aa072bdc0af50f9f7",
+       "model_id": "9cd23b5a64f7437a97481f4b0d8c0c62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -550,7 +641,7 @@
     {
      "data": {
       "text/plain": [
-       "<Kildekode._11_Frekvensrespons.DTFT_demo at 0x228e53d9fa0>"
+       "<Kildekode._11_Frekvensrespons.DTFT_demo at 0x25c61b44730>"
       ]
      },
      "execution_count": 4,
