--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -16,8 +16,9 @@
     "6 | [Diskrét Fouriertransformasjon](06_Diskrét%20Fouriertransformasjon.ipynb) | Oppdatert fredag 12. februar\n",
     "7 | [Frekvensanalyse med DFT](07_Frekvensanalyse%20med%20DFT.ipynb) | oppdatert 23. februar \n",
     "8 | [Effektspekter og Spektrogram](08_Effektspekter%20og%20Spektrogram.ipynb) | Oppdatert 26. februar \n",
-	"9 | [Oppsummeringsforelesning Signalanalyse](09_Oppsummeringsforelesning.ipynb) | Fredag 26. februar \n", 
-	"10 | [LTI-system, impulsrespons og konvolusjon](10_Digitale%20filtre%20intro.ipynb) | Oppdatert Fredag 12. mars "
+    "9 | [Oppsummeringsforelesning Signalanalyse](09_Oppsummeringsforelesning.ipynb) | Fredag 26. februar \n",
+    "10 | [LTI-system, impulsrespons og konvolusjon](10_Digitale%20filtre%20intro.ipynb) | Oppdatert tirsdag 16. mars \n",
+    "11 | [Frekvensrespons](11_Frekvensrespons.ipynb) | Oppdatert fredag 19. mars"
    ]
   }
  ],
