--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -18,7 +18,8 @@
     "8 | [Effektspekter og Spektrogram](08_Effektspekter%20og%20Spektrogram.ipynb) | Oppdatert 26. februar \n",
     "9 | [Oppsummeringsforelesning Signalanalyse](09_Oppsummeringsforelesning.ipynb) | Fredag 26. februar \n",
     "10 | [LTI-system, impulsrespons og konvolusjon](10_Digitale%20filtre%20intro.ipynb) | Oppdatert tirsdag 16. mars \n",
-    "11 | [Frekvensrespons](11_Frekvensrespons.ipynb) | Oppdatert fredag 19. mars"
+    "11 | [Frekvensrespons](11_Frekvensrespons.ipynb) | Oppdatert fredag 19. mars\n",
+    "12 | [DTFT og praktisk filterdesign](12_DTFT%20og%20praktisk%20filterdesign.ipynb) | Ny tirsdag 23. mars"
    ]
   }
  ],
