Figurer filnavn redigert

--- a/12_DTFT og praktisk filterdesign.ipynb
+++ b/12_DTFT og praktisk filterdesign.ipynb
@@ -2,28 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bec81e012dc34778a85d3c2da226b462",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generelle moduler og funksjonsbeskrivelser brukt i forelesningen\n",
     "from numpy import sin, cos, pi, exp\n",
@@ -38,22 +23,26 @@
     "    H_phase = np.unwrap(np.angle(Hw))\n",
     "    plt.close(fig_num); plt.figure(fig_num)\n",
     "    plt.subplot(2,1,1)\n",
-    "    plt.plot(w, H_amp)\n",
+    "    plt.plot(w, 20*np.log10(H_amp))\n",
     "    plt.grid(True)\n",
     "    plt.xticks(np.linspace(0, 1, 6)*pi, [str(round(i,2))+r'$\\pi$' for i in np.linspace(0, 1, 6)])\n",
     "    plt.xlabel(r'Digital Frekvens $\\hat{\\omega}$')\n",
-    "    plt.ylabel(r'$\\left| H\\left(e^{j\\hat{\\omega}}\\right)\\right|$')\n",
+    "    plt.ylabel(r'$\\left| H\\left(e^{j\\hat{\\omega}}\\right)\\right|$ (dB)')\n",
     "    plt.xlim([0, pi])\n",
     "    plt.title(r'Frekvensrespons $H\\left(e^{j\\hat{\\omega}}\\right)$')\n",
     "    \n",
-    "    plt.subplot(2,1,2)\n",
-    "    plt.plot(w, H_phase)\n",
+    "    ax_phase = plt.subplot(2,1,2)\n",
+    "    phaseResp, = plt.plot(w, H_phase/pi)\n",
+    "    yticks = ax_phase.get_yticks()\n",
+    "    ylim = ax_phase.get_ylim()\n",
+    "    phaseResp.set_ydata(H_phase)\n",
     "    plt.grid(True)\n",
     "    plt.xticks(np.linspace(0, 1, 6)*pi, [str(round(i,2))+r'$\\pi$' for i in np.linspace(0, 1, 6)])\n",
-    "    plt.yticks(np.linspace(0, -1, 6)*pi, [str(round(i,2))+r'$\\pi$' for i in np.linspace(0, -1, 6)])\n",
+    "    plt.yticks(yticks*pi, [str(round(i,2))+r'$\\pi$' for i in yticks])\n",
     "    plt.xlabel(r'Digital Frekvens $\\hat{\\omega}$')\n",
     "    plt.ylabel(r'$\\angle H\\left(e^{j\\hat{\\omega}}\\right)$')\n",
     "    plt.xlim([0, pi])\n",
+    "    plt.ylim(np.array(ylim)*pi)\n",
     "    plt.tight_layout(pad=0.1, w_pad=1.0, h_pad=1.0)\n",
     "\n",
     "%matplotlib ipympl"
@@ -71,7 +60,7 @@
     "<br clear=\"all\" />\n",
     "<br></br>\n",
     "\n",
-    "# Frekvensrespons for FIR filtre\n",
+    "# DTFT og praktisk filterdesign\n",
     "\n",
     "* **Emne IELEA2302 - Signalbehandling**\n",
     "* **Uke 12, 2021**\n",
@@ -169,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -179,7 +168,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d39205e2d1648a9b439e0d0ba8dd22b",
+       "model_id": "e6ea4c764d2548689deda0cef9b1555c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -193,7 +182,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f78f38377ba14ec08d55a13e14ce2064",
+       "model_id": "28ad321ea7af40e582abda6fdd0e40e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -207,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d61dc14f42b4ca8aecca7ec528064cf",
+       "model_id": "c3eb5dee3e644d5bba23e1e280614dea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -221,10 +210,10 @@
     {
      "data": {
       "text/plain": [
-       "<Kildekode._11_Frekvensrespons.FreqRespDemo at 0x1b15b39a4f0>"
+       "<Kildekode._11_Frekvensrespons.FreqRespDemo at 0x1f4ac0add00>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +237,7 @@
     "\n",
     "* Formel for *kausale* filtre:\n",
     "\n",
-    "### \\begin{align}H\\left(e^{j\\hat{\\omega}}\\right) &= \\sum_{n=-\\infty}^{\\infty} h[n]\\cdot e^{-j\\hat{\\omega}\\cdot n}\\\\ &= h[0]\\cdot e^{0}+h[1]\\cdot e^{-j\\hat{\\omega}}+h[2]\\cdot e^{-j2\\hat{\\omega}}+\\ldots \\end{align}"
+    "### \\begin{align}H\\left(e^{j\\hat{\\omega}}\\right) &= \\sum_{n=0}^{\\infty} h[n]\\cdot e^{-j\\hat{\\omega}\\cdot n}\\\\ &= h[0]\\cdot e^{0}+h[1]\\cdot e^{-j\\hat{\\omega}}+h[2]\\cdot e^{-j2\\hat{\\omega}}+\\ldots \\end{align}"
    ]
   },
   {
@@ -277,15 +266,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2354bd233ca148a69ca316f5baf92f5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "55460641f0aa4e88900d8b4d5f7e4c2d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatSlider(value=0.0, description='Digital Frekvens $\\\\hat{\\\\omega}\\\\ (\\\\times \\\\pi)$:', layou…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a509ead6ed6e4da3badf992e2a3e77d6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Kildekode._11_Frekvensrespons.DTFT_demo at 0x1f4acced460>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hn = np.array([0.25, 0.5, 0.25])\n",
+    "hn = np.array([-0.25, 0.5, -0.25])\n",
     "DTFT_demo(hn, fig_num = 6, figsize=(12,8))"
    ]
   },
@@ -413,7 +455,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide1.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide1.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -443,7 +485,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide2.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide2.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -454,7 +496,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide3.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide3.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -473,24 +515,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa36ebfc03fc465bb55266735d62add4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
-   },
+   ],
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide4.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "M = 36\n",
+    "w_c = 0.3*pi\n",
+    "n = np.arange(-int(M/2), int(M/2)+1)\n",
+    "hn = w_c/pi * np.sinc(w_c/pi*n)\n",
+    "displayFrequencyResponse(b=hn, fig_num = 2)"
    ]
   },
   {
@@ -501,7 +553,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide5.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide4.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -512,7 +564,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide6.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide5.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -523,7 +575,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide7.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide6.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -534,7 +586,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide8.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide7.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -545,7 +597,7 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide9.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide8.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -556,7 +608,18 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide10.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide9.PNG\" style=\"width: 90%; margin-left: 50px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide10.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -573,24 +636,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d56cb36728b4bf282448a37b0c18bae",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
-   },
+   ],
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide11.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "M = 36\n",
+    "w_c = 0.3*pi\n",
+    "n = np.arange(-int(M/2), int(M/2)+1)\n",
+    "w_n = sig.windows.hamming(M+1)\n",
+    "hn = w_c/pi * np.sinc(w_c/pi*n) * w_n\n",
+    "displayFrequencyResponse(b=hn, fig_num = 2)"
    ]
   },
   {
@@ -601,7 +675,18 @@
     }
    },
    "source": [
-    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide12.png\" style=\"width: 90%; margin-left: 50px\" />"
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide11.PNG\" style=\"width: 90%; margin-left: 50px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"Figurer/12_DTFT%20og%20filterdesign/Slide12.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -618,14 +703,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1f5e5c7c12434c4e8faecf2597c0aca5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "M = 128\n",
+    "w_c = 0.1*pi\n",
+    "\n",
+    "n = np.arange(-int(M/2), int(M/2)+1)\n",
+    "wn = sig.windows.hamming(M+1)\n",
+    "hn_lp = w_c/pi * np.sinc(w_c/pi*n) * wn\n",
+    "hn_bp = hn_lp* 2*cos(n* 0.4*pi)\n",
+    "displayFrequencyResponse(b=hn_bp, fig_num = 3)"
+   ]
   },
   {
    "cell_type": "markdown",
