--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -19,7 +19,8 @@
     "9 | [Oppsummeringsforelesning Signalanalyse](09_Oppsummeringsforelesning.ipynb) | Fredag 26. februar \n",
     "10 | [LTI-system, impulsrespons og konvolusjon](10_Digitale%20filtre%20intro.ipynb) | Oppdatert tirsdag 16. mars \n",
     "11 | [Frekvensrespons](11_Frekvensrespons.ipynb) | Oppdatert fredag 19. mars\n",
-    "12 | [DTFT og praktisk filterdesign](12_DTFT%20og%20praktisk%20filterdesign.ipynb) | Ny tirsdag 23. mars"
+    "12 | [DTFT og praktisk filterdesign](12_DTFT%20og%20praktisk%20filterdesign.ipynb) | Ny tirsdag 23. mars\n",
+    "12 | [IIR filtre introduksjon](12_IIR%20filtre%20introduksjon.ipynb) | Ny fredag 26. mars"
    ]
   }
  ],
