--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -20,7 +20,8 @@
     "10 | [LTI-system, impulsrespons og konvolusjon](10_Digitale%20filtre%20intro.ipynb) | Oppdatert tirsdag 16. mars \n",
     "11 | [Frekvensrespons](11_Frekvensrespons.ipynb) | Oppdatert fredag 19. mars\n",
     "12 | [DTFT og praktisk filterdesign](12_DTFT%20og%20praktisk%20filterdesign.ipynb) | Ny tirsdag 23. mars\n",
-    "12 | [IIR filtre introduksjon](12_IIR%20filtre%20introduksjon.ipynb) | Ny fredag 26. mars"
+    "12 | [IIR filtre introduksjon](12_IIR%20filtre%20introduksjon.ipynb) | Ny fredag 26. mars\n",
+    "14 | [Z-transformasjon del 1](14_Z-transformasjon.ipynb) | Oppdatert fredag 9. april"
    ]
   }
  ],
